[tool.poetry]
name = "data-structures-analysis"
version = "0.1.0"
description = "Analysis of different data structure implementations"
authors = ["Anupraj Guragain <guragain01@allegheny.edu>"]
packages = [
    { include = "analyze" }
]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyze = "analyze.main:app"