[tool.poetry]
name = "queue-analysis"
version = "0.1.0"
description = "Queue Implementation Performance Analysis Tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "analyze"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
matplotlib = "^3.8.2"
pyqt6 = "^6.8.1"

[tool.poetry.scripts]
analyze = "analyze.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"